devops-monitoring: docker: Update Dockerfile and enhance security features
- Upgraded the base image in the Dockerfile to Node.js 20 Alpine for improved security and performance.
- Optimized the Dockerfile by updating Alpine packages and refining the installation of build dependencies.
- Integrated Docker Scout into the GitHub Actions workflow for automated security scanning of Docker images, focusing on critical and high severity vulnerabilities.
- Expanded the documentation to include new security features, detailing automated scanning, vulnerability detection, and security measures implemented in the Docker setup.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -116,6 +116,16 @@ jobs:
         cache-from: ${{ github.event.inputs.cache_enabled == 'true' && 'type=gha' || '' }}
         cache-to: ${{ github.event.inputs.cache_enabled == 'true' && 'type=gha,mode=max' || '' }}
         
+    - name: Run Docker Scout
+      if: ${{ github.event.inputs.push_to_registry != 'false' }}
+      uses: docker/scout-action@v1
+      with:
+        command: cves
+        image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.image_version }}
+        only-severities: critical,high
+        exit-code: true
+        write-comment: true
+        
     - name: Image digest
       if: ${{ github.event.inputs.push_to_registry != 'false' }}
       run: echo ${{ steps.build.outputs.digest }}
