--- a/ui-next/package.json
+++ b/ui-next/package.json
@@ -44,9 +44,9 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.309.0",
     "next": "^14.2.32",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^7.0.10",
     "pg": "^8.11.3",
     "prisma": "^6.15.0",
     "react": "^18.2.0",
@@ -68,5 +68,9 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "glob": "^12.0.0",
+    "cookie": "^0.7.0"
   }
 }
